force-app/main/default/objects/Accumulator_Rate__c/Accumulator_Rate__c.object-meta.xml
<CustomObject>
    <label>Accumulator Rate</label>
    <nameField>
        <displayFormat>ARA-{0000}</displayFormat>
        <label>Accumulator Rate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accumulator Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>