force-app/main/default/objects/Accumulator_Rate__c/fields/Accumulator_Rule__c.field-meta.xml
<CustomField>
    <fullName>Accumulator_Rule__c</fullName>
    <label>Accumulator Rule</label>
    <referenceTo>AccumulatorRule__c</referenceTo>
    <relationshipLabel>Accumulator Rates</relationshipLabel>
    <relationshipName>Accumulator_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>