force-app/main/default/objects/Accumulator_Rate__c/fields/FIN_Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>FIN_Lower_Bound__c</fullName>
    <label>Lower Bound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>