force-app/main/default/objects/Accumulator_Rate__c/fields/FIN_Price__c.field-meta.xml
<CustomField>
    <fullName>FIN_Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>