force-app/main/default/objects/Accumulator_Rate__c/fields/FIN_Processing_Order__c.field-meta.xml
<CustomField>
    <fullName>FIN_Processing_Order__c</fullName>
    <label>Processing Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>